# bbl-agentic-rag-assessment

./: .env.example  .gitignore  README.md  knowledge_base.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
agentic_rag/: __init__.py  agents.py  cli.py  config.py  models.py  retrieval.py  workflow.py
notebooks/: explainable_rag_walkthrough.ipynb
scripts/: build_notebook.py
tests/: conftest.py  test_agents.py  test_cli.py  test_config.py  test_retrieval.py  test_workflow.py
